# GoodForThePlanetBadForMe

./: Analysis.ipynb  JAIS_Analysis.ipynb  README.md  pyproject.toml
data/: prolific_export_688a15651f7597f63277fb8d.csv  survey.json
