[project]
name = "goodfortheplanetbadforme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "pandas>=3.0.0",
    "pingouin>=0.5.5",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
    "semopy>=2.3.11",
    "statannotations>=0.7.2",
    "statsmodels>=0.14.6",
]
